--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: node_js
 node_js:
-  - "8.9"
+  - "9"
 
 script:
   - npm run build
 
 after_success:
+    - npm install ci-publish
     - $(npm bin)/ci-publish || true
 
