--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     ],
     "license": "MIT",
     "dependencies": {
-        "angular": ">=1.2.26 <=1.6"
+        "angular": ">=1.2.26 <=1.6",
+        "ci-publish": "^1.3.1"
     },
     "devDependencies": {
         "grunt": "~1.0.1",
