--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "zero-angularjs-helper",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "AngularJS Helper Module",
     "main": "dist/zero-angularjs-helper.js",
     "repository": {
@@ -34,8 +34,7 @@
     ],
     "license": "MIT",
     "dependencies": {
-        "angular": ">=1.2.26 <=1.6",
-        "ci-publish": "^1.3.1"
+        "angular": ">=1.2.26 <=1.6"
     },
     "devDependencies": {
         "grunt": "~1.0.1",
