--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,7 @@ after_success:
     - $(npm bin)/ci-publish || true
 deploy:
   provider: releases
-  api_key:
-    secure: $RELEASE_API_TOKEN
+  api_key: $RELEASE_API_TOKEN
   file:
     - "dist/zero-angularjs-helper.js"
     - "dist/zero-angularjs-helper.min.js"
